# Kel.DesignPattern

./: .clang-format  .gitignore  AUTOMATION.md  CHANGELOG.md  CMakeLists.txt  README.md  bugfix.js  compile_wasm.bat  compile_wasm.sh  index.html  unzip.bat
.claude/: settings.local.json
.github/workflows/: cmake.yml  deploy-web.yml  pr-flow.yml
assets/: index-BLTOnCtu.css  index-CpHmsBb3.js
docs/: design-pattern-analysis.md  runtime-state-separation.md  sequence-diagram.md  sequence-diagram.puml  technical-design-document.md
include/blind/: BigBlindState.h  BlindManager.h  BlindRule.h  BlindState.h  BossBlindState.h  SmallBlindState.h
include/card/: Card.h  Deck.h
include/hand_selection/: ChosenHand.h  Hand.h  HandGenerator.h  HandServices.h  SelectionCommand.h  SelectionManager.h  SelectionValidator.h
include/joker/: ChipsBoostJoker.h  ConcreteJokers.h  FlushMultJoker.h  Joker.h  JokerCard.h  JokerFactory.h  JokerManager.h  MultBoostJoker.h  Observer.h  Subject.h
include/poker_evaluation/: ChosenHand.h  HandEvaluation.h  HandHandler.h  IPokerHandChecker.h  PokerHandEvaluator.h  PokerHandType.h  PokerHandUtils.h
include/poker_evaluation/checker/: FiveOfKindChecker.h  FlushChecker.h  FlushFiveChecker.h  FlushHouseChecker.h  FourOfKindChecker.h  FullHouseChecker.h  HighCardChecker.h  PairChecker.h  RoyalFlushChecker.h  StraightChecker.h  StraightFlushChecker.h  ThreeOfKindChecker.h  TwoPairChecker.h
include/reward/: BonusHandCommand.h  FreePlayingCardCommand.h  JokerRewardCommand.h  PlanetCardCommand.h  RewardCommand.h  RewardManager.h  ShopSystem.h
include/run/: AnteManager.h  GameManage.h  HandPlayer.h  RoundManager.h  RunState.h
include/scoring/: ConcreteScoreCalculators.h  HandScore.h  ScoreCalculator.h  ScoreContext.h  ScoringRule.h
include/session/: RuntimeSession.h
include/state/: BlindRuntimeState.h  RunPersistentState.h  RunSessionState.h  ScoreContext.h
include/tag/: ConcreteTags.h  Tag.h  TagFactory.h
src/: BlindRule.cpp  GameManage.cpp  Hand.cpp  HandGenerator.cpp  HandHandler.cpp  HandPlayer.cpp  JokerCard.cpp  RewardRule.cpp  ScoringRule.cpp  main.cpp  main_tui.cpp
src/blind/: BigBlindState.cpp  BlindRule.cpp  BossBlindState.cpp  SmallBlindState.cpp
src/checker/: FiveOfKindChecker.cpp  FlushChecker.cpp  FlushHouseChecker.cpp  FourOfKindChecker.cpp  FullHouseChecker.cpp  HighCardChecker.cpp  PairChecker.cpp  RoyalFlushChecker.cpp  StraightChecker.cpp  StraightFlushChecker.cpp  ThreeOfKindChecker.cpp  TwoPairChecker.cpp
src/hand_selection/: Hand.cpp  HandGenerator.cpp
src/joker/: ChipsBoostJoker.cpp  FlushMultJoker.cpp  JokerCard.cpp  JokerFactory.cpp  JokerManager.cpp  MultBoostJoker.cpp
src/lib/: BlindRule.h  Card.h  ChosenHand.h  ConcreteScoreCalculators.h  GameManage.h  Hand.h  HandGenerator.h  HandHandler.h  HandPlayer.h  HandScore.h  IPokerHandChecker.h  JokerCard.h  Observer.h  PokerHandType.h  PokerHandUtils.h  RewardRule.h  ScoreCalculator.h  ScoringRule.h  Subject.h
src/lib/checker/: FiveOfKindChecker.h  FlushChecker.h  FlushHouseChecker.h  FourOfKindChecker.h  FullHouseChecker.h  HighCardChecker.h  PairChecker.h  RoyalFlushChecker.h  StraightChecker.h  StraightFlushChecker.h  ThreeOfKindChecker.h  (+1 more)
src/poker_evaluation/: HandHandler.cpp  PokerHandEvaluator.cpp
src/reward/: BonusHandCommand.cpp  FreePlayingCardCommand.cpp  RewardManager.cpp  RewardRule.cpp  ShopSystem.cpp
src/run/: AnteManager.cpp  GameManage.cpp  HandPlayer.cpp  RoundManager.cpp  main.cpp
src/scoring/: ScoringRule.cpp
src/session/: RuntimeSession.cpp
src/state/: BlindRuntimeState.cpp  RunSessionState.cpp
src/tag/: TagFactory.cpp
src/web/: bindings.cpp
tests/: test_blind.cpp  test_blind_progression.cpp  test_blind_round.cpp  test_boundary_enforcement.cpp  test_card.cpp  test_checkers.cpp  test_deck_hand.cpp  test_joker.cpp  test_joker_system.cpp  test_persistent_state.cpp  test_poker_evaluation.cpp  test_reward.cpp  test_reward_commands.cpp  test_rewards_subsystem.cpp  test_run_integration.cpp  test_runtime_state.cpp  test_score_context.cpp  test_scoring.cpp  test_selection.cpp  test_tags.cpp
web/: BUILD_INSTRUCTIONS.md  README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.css  App.jsx  index.css  wasmGameMock.js
(+13 files in other folders)
